--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.42.0",
+    "vercel": "^50.4.5",
     "vite": "^7.1.4"
   }
 }
